# fish_rotations

./: README.md  pyproject.toml
data/: 50 1мг.txt  72-50 learn.txt  78-33 naive.txt  results.xlsx
src/: rotations.py
